Se adapto logica de Expendedor para que ahora se pueda entregar vuelto en valores distintos de 100 y se implemento el deposito Producto que contiene el producto comprado